--- a/package.json
+++ b/package.json
@@ -2,6 +2,16 @@
   "name": "shopping-cart",
   "version": "0.1.0",
   "private": true,
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/gustavobastian/shopping-card"
+  },
+  "author": "Gustavo Bastian",
+  "license": "GPL",
+  "bugs": {
+    "url": "https://github.com/gustavobastian/shopping-cart/issues"
+  },
+  "homepage": "https://gustavobastian.github.io/shopping-cart",
   "dependencies": {
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
@@ -15,7 +25,9 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build"
   },
   "eslintConfig": {
     "extends": [
@@ -34,5 +46,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "gh-pages": "^5.0.0"
   }
 }
