--- a/package.json
+++ b/package.json
@@ -21,6 +21,8 @@
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.11.1",
     "react-scripts": "5.0.1",
+    "uniqid": "^5.4.0",
+    "uniquid": "^1.1.4",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
